macOS: Fix video rendering on with OpenGL Core profile

CoreAnimation OpenGL renderer only has support for pre 3.0 profiles.
Changed CoreAnimation renderer to use a Metal texture for rendering
and use a pixel buffer to share the texture data with an OpenGL
texture, making it possible to render with 3.2+ profiles.

Fixes: QTBUG-51064
Fixes: QTBUG-62694
Change-Id: I48a4a6e0d8fbc48170dfe82d1e71cd265d70179a
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit abab792c4f0977a4599e5b7b2e97a5ee586fe388)
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>